--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^20.4.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "tslint-config-prettier": "^1.18.0",g
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.1.6"
   },
   "scripts": {
