--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "dev": "cd src && nodemon --exec  ts-node  index.ts "
+    "dev": "cd src && nodemon --exec  ts-node  index.ts -e ts,graphql"
   }
   
   
