--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "description": "Clone Reddit using TS, Next JS , chakraUI, Express JS, GraphQL ",
   "main": "index.js",
+  "scripts": {
+    "dev": "cd src && nodemon --exec ts-node index.ts"
+  },
   "repository": "https://github.com/ddhuu/QReddit.git",
   "author": "ddhuu203",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "nodemon": "^3.0.1"
   }
 }
