--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Clone Reddit using TS, Next JS , chakraUI, Express JS, GraphQL ",
   "main": "index.js",
   "scripts": {
-    "dev": "cd src && nodemon --exec ts-node index.ts"
+    "server-ts": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
+    "server":"nodemon dist/index.js",
+    "start-ts":"ts-node src/index.ts",
+    "watch": "tsc -w"
   },
   "repository": "https://github.com/ddhuu/QReddit.git",
   "author": "ddhuu203",
@@ -15,6 +18,16 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "nodemon": "^3.0.1"
+    "@types/express": "^4.17.17",
+    "apollo-server-express": "^3.12.0",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "graphql": "^16.7.1",
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.1",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.17"
   }
 }
