--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server-ts": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
-    "server":"nodemon dist/index.js",
-    "start-ts":"ts-node src/index.ts",
+    "server": "nodemon dist/index.js",
+    "start-ts": "ts-node src/index.ts",
     "watch": "tsc -w"
   },
   "repository": "https://github.com/ddhuu/QReddit.git",
@@ -19,11 +19,12 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "graphql": "^16.7.1",
+    "graphql": "^15.8.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
