--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.17",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
+    "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
