--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "graphql": "^15.8.0",
+    "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
